--- a/tasks/elasticsearch.yml
+++ b/tasks/elasticsearch.yml
@@ -4,24 +4,24 @@
     repo="deb http://packages.elastic.co/elasticsearch/{{ elk_elasticsearch.version }}/{{ ansible_os_family|lower }} stable main"
     update_cache=yes
   when: ansible_os_family == 'Debian'
-  sudo: yes
+  become: yes
 
 - name: Install ES apt packages
   apt: pkg=elasticsearch update_cache=yes state=latest
-  sudo: yes
+  become: yes
   when: ansible_os_family == 'Debian'
   notify: Restart elasticsearch
 
 - name: Curator PIP package
   pip: name=elasticsearch-curator state=latest
-  sudo: yes
+  become: yes
 
 - name: ES config file
   template:
     src=elasticsearch.yml.j2
     dest=/etc/elasticsearch/elasticsearch.yml
     owner=root group=root mode=644
-  sudo: yes
+  become: yes
   notify: Restart elasticsearch
 
 - name: Make monit to look after ES
@@ -29,5 +29,5 @@
     src=elasticsearch.monitrc.conf.j2
     dest=/etc/monit/conf.d/elasticsearch.monitrc.conf
     owner=root group=root mode=644
-  sudo: yes
+  become: yes
   notify: Restart monit
