--- a/tasks/java.yml
+++ b/tasks/java.yml
@@ -4,12 +4,12 @@
     repo='ppa:webupd8team/java'
     update_cache=yes
   when: elk_java.flavor == 'oracle' and ansible_distribution == 'Ubuntu'
-  sudo: yes
+  become: yes
 
 - name: Check Oracle license
   shell:
     /usr/bin/debconf-show oracle-java7-installer |awk '/accepted-oracle-license/{print $NF}'
-  sudo: yes
+  become: yes
   changed_when: False
   when: elk_java.flavor == 'oracle' and ansible_distribution == 'Ubuntu'
   register: webupd8team
@@ -17,10 +17,10 @@
 - name: Accept Oracle license
   shell:
     echo 'oracle-java7-installer shared/accepted-oracle-license-v1-1 select true' | /usr/bin/debconf-set-selections
-  sudo: yes
+  become: yes
   when: elk_java.flavor == 'oracle' and ansible_distribution == 'Ubuntu' and webupd8team.stdout != 'true'
 
 - name: Java apt packages
   apt: pkg={{ item }} update_cache=yes state=present
   with_items: elk_java.{{ elk_java.flavor }}
-  sudo: yes
+  become: yes
