--- a/tasks/kibana.yml
+++ b/tasks/kibana.yml
@@ -4,13 +4,13 @@
     repo="deb http://packages.elastic.co/kibana/{{ elk_kibana.version }}/{{ ansible_os_family|lower }} stable main"
     update_cache=yes
   when: ansible_os_family == 'Debian'
-  sudo: yes
+  become: yes
 
 - name: Install kibana apt packages
   apt: pkg={{ item }} update_cache=yes state=present
   with_items:
    - kibana
-  sudo: yes
+  become: yes
   when: ansible_os_family == 'Debian'
   notify: Restart logstash
 
@@ -19,7 +19,7 @@
     src=/opt/kibana-{{ elk_kibana.version }}
     path={{ elk_kibana.path }} state=link
     owner={{ elk_nginx.user }} group={{ elk_nginx.user }}
-  sudo: yes
+  become: yes
 
 - name: Kibana files ownership
   file:
@@ -27,14 +27,14 @@
     state=directory
     owner={{ elk_nginx.user }} group={{ elk_nginx.user }} recurse=yes
   changed_when: False
-  sudo: yes
+  become: yes
 
 - name: Supervisor config file
   template:
     src=kibana-supervisor.j2
     dest=/etc/supervisor/conf.d/kibana.conf
     owner=root group=root mode=644
-  sudo: yes
+  become: yes
   notify: Restart supervisor
 
 - name: Generate kibana htpassword
@@ -43,7 +43,7 @@
   args:
     chdir: /etc/nginx/conf.d
     creates: /etc/nginx/conf.d/.kibana.htpasswd
-  sudo: yes
+  become: yes
   register: http_pass_gen
   when: elk_kibana.user is defined and elk_kibana.password is defined
 
@@ -51,7 +51,7 @@
   file:
     path=/etc/nginx/conf.d/.kibana.htpasswd
     owner={{ elk_nginx.user }} group=root mode=400
-  sudo: yes
+  become: yes
   when: http_pass_gen|changed
     
 - name: Nginx config file
@@ -59,5 +59,5 @@
     src=kibana-default.j2
     dest=/etc/nginx/conf.d/kibana.conf
     owner=root group=root mode=644
-  sudo: yes
+  become: yes
   notify: Restart nginx
