--- a/tasks/logstash.yml
+++ b/tasks/logstash.yml
@@ -4,14 +4,14 @@
     repo="deb http://packages.elastic.co/logstash/{{ elk_logstash.version }}/{{ ansible_os_family|lower }} stable main"
     update_cache=yes
   when: ansible_os_family == 'Debian'
-  sudo: yes
+  become: yes
 
 - name: Install logstash apt packages
   apt: pkg={{ item }} update_cache=yes state=present
   with_items:
    - logstash
    - logstash-contrib
-  sudo: yes
+  become: yes
   when: ansible_os_family == 'Debian'
   notify: Restart logstash
 
@@ -21,7 +21,7 @@
     dest=/etc/logstash/conf.d/{{ item.dest }}
     owner=root group=root mode=644
   with_items: elk_logstash.configs
-  sudo: yes
+  become: yes
   notify: Restart logstash
 
 - name: Logstash pattern files
@@ -30,7 +30,7 @@
     dest=/opt/logstash/patterns/{{ item.dest }}
     owner=root group=root mode=644
   with_items: elk_logstash.patterns
-  sudo: yes
+  become: yes
   when: elk_logstash.patterns is defined
   notify: Restart logstash
 
@@ -39,5 +39,5 @@
     src=logstash.monitrc.conf.j2
     dest=/etc/monit/conf.d/logstash.monitrc.conf
     owner=root group=root mode=644
-  sudo: yes
+  become: yes
   notify: Restart monit
