--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,7 +4,7 @@
 
 - name: Install common apt packages
   apt: pkg={{ item }} state=latest update_cache=true
-  with_items: elk_common_packages
+  with_items: '{{ elk_common_packages }}'
   become: yes
 
 - name: Monit conf file
